--- a/home.html
+++ b/home.html
@@ -726,7 +726,7 @@
 
 
 
-                        <p class="website__rights ">© CYCLERS STUDIOS.
+                        <p class="website__rights ">© CYCLERS STUDIO.
                             <script>
                                 document.write(new Date().getFullYear())
                             </script>
