--- a/home.html
+++ b/home.html
@@ -234,13 +234,13 @@
                     <div class="what-we-have">
                         <div class="live-equipment">
 
-                            <div class="live-equipment-description js-scroll slide-right">
+                            <div class="live-equipment-description js-scroll slide-down">
                                 <h1>Live Instruments</h1>
                                 <p>ednostavno probni tekst koji se koristi u tiskarskoj i slovoslagarskoj </p>
                             </div>
                         </div>
 
-                        <div class="what-we-have professional-equipment js-scroll slide-left">
+                        <div class="what-we-have professional-equipment js-scroll slide-down">
                             <!-- <img src="/images/noun_Music_1914708 1.png" alt=""> -->
                             <div class="live-equipment-description ">
                                 <h1>Live Ins</h1>
@@ -347,7 +347,7 @@
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/smiling-demon.png" alt="">
+                    <img src="./images/1.jpeg" alt="">
                     <div class="img-text">
                         <div class="cont">
                             <h4>AUDIO</h4>
