--- a/contact_us/contact.html
+++ b/contact_us/contact.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="description" content="Audio Recording, Mixing, Editing, mastering, Live Session" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CYCLERS||STUDIOS</title>
+    <title>CYCLERS||STUDIOS||CONTACT US</title>
     <link href="https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
@@ -81,14 +81,14 @@
                     <div class="form-group">
                         <div class="col-sm-12">
                             <!-- name -->
-                            <input type="text" class="form-control" id="name" placeholder="NAME" name="name" value="" />
+                            <input type="text" class="form-control" placeholder="NAME" name="name" value="" />
                         </div>
                     </div>
 
                     <div class="form-group">
                         <div class="col-sm-12">
                             <!-- email -->
-                            <input type="email" class="form-control" id="email" placeholder="EMAIL" name="email" value="" />
+                            <input type="email" class="form-control" placeholder="EMAIL" name="email" value="" />
                         </div>
                     </div>
 
@@ -96,7 +96,7 @@
                     <textarea class="form-control" rows="10" placeholder="MESSAGE" name="message">
                     </textarea>
 
-                    <button class="btn btn-primary send-button" id="submit" type="submit" value="SEND">
+                    <button class="btn btn-primar send-button" name="submit" type="submit" value="SEND">
                     <i class="fa fa-paper-plane"></i>
                     <span class="send-text">SEND</span>
                     </button>
