--- a/home.html
+++ b/home.html
@@ -119,23 +119,18 @@
                 <div class="main">
                     <div class="main__container">
 
-                        <div class="vid">
 
-                            <video autoplay muted controls loop id="bg-video">
-              <source src="/images/video_2022-02-26_10-47-12.mp4" type="Video/mp4" />
-          </video>
-                        </div>
                         <div class="main__content">
-                            <h1 class="vocal anim-typewriter "></h1>
-                            <!-- <h2>Photo Studio</h2>
-          <p>Audio Recording, Mixing, Editing, mastering, Live Session</p> -->
-                            <button class="main__btn" style="justify-content: center;"><a href="#">Book An Appointment</a></button>
+                            <h1 class="vocal anim-typewriter">Videography</h1><br>
+                            <h2>& Photography</h2>
+                            <p>Audio Recording, Mixing, Editing, mastering, Live Session</p>
+                            <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
-                        <!-- <div class="main__img--container wave">
-          <img class = "single-wave" id="main__img" src="image/compressed-mic.png" />
-        </div> -->
-
+                        <div class="wave">
+                            <img id="main__img" src="images/compressed-mic.png" />
+                        </div>
                     </div>
+
                 </div>
             </div>
 
@@ -151,10 +146,11 @@
                             <p>Audio Recording, Mixing, Editing, mastering, Live Session</p>
                             <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
-                        <div class="wave art">
-                            <img id="main__img" src="images/11_adobespark.png" style="height: 500px; width: 700px" />
+                        <div class="wave">
+                            <img id="main__img" src="images/11_adobespark.png" />
                         </div>
                     </div>
+
                 </div>
             </div>
 
