--- a/video production/video.html
+++ b/video production/video.html
@@ -42,13 +42,13 @@
             </div>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a href="home.html" class="navbar__links">Home</a>
+                    <a href="/home.html" class="navbar__links">Home</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#about" class="navbar__links">About Us</a>
+                    <a href="/home.html" class="navbar__links">About Us</a>
                 </li>
                 <li class="navbar__item">
-                    <a href="#services" class="navbar__links">Services</a>
+                    <a href="/home.html" class="navbar__links">Services</a>
                 </li>
                 <li class="navbar__item">
                     <a href="./contact_us/contact.html" class="navbar__links">Contact Us</a>
@@ -57,7 +57,7 @@
 
                     <div class="login-container">
 
-                        <button class="main__btn" type="submit"><a href="./form/form.html">Book An Appointment</a></button>
+                        <button class="main__btn" type="submit"><a href="../form/form.html">Book An Appointment</a></button>
 
                     </div>
                 </li>
