--- a/home.html
+++ b/home.html
@@ -187,7 +187,7 @@
 
                             <div class="content-serve">
                                 <h2>01</h2>
-                                <h3>Voice Recording</h3>
+                                <h3>Videography</h3>
                                 <p>
                                     Want to record voice over for a film, a commercial, audio book or podcast?<br> We’ve done all of the above, including trailers for Nollywood films and political campaigns.<br> CYCLERS STUDIO has enough room for recording
                                     vocals, and it’s also perfect for voice-over recordings.
