--- a/home.html
+++ b/home.html
@@ -122,12 +122,12 @@
 
                         <div class="main__content">
                             <h1 class="vocal anim-typewriter">Videography</h1><br>
-                            <h2>& Photography</h2>
+                            <h2> Photography</h2>
                             <p>Audio Recording, Mixing, Editing, mastering, Live Session</p>
                             <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
                         <div class="wave">
-                            <img id="main__img" src="images/compressed-mic.png" />
+                            <img id="main__img" src="images/video.png" />
                         </div>
                     </div>
 
