--- a/home.html
+++ b/home.html
@@ -407,9 +407,9 @@
                             <img src="/images/manager.jpg" alt="Team Image">
                         </div>
                         <div class="team-content">
-                            <h2>Mary Odogbo</h2>
+                            <h2 style="font-size: 15px" ;>Mary Odogbo</h2>
                             <h3>General Manager</h3>
-                            <p> Mary Odogbo is the General Manager of cyclers Studio. Mary helped in sourcing for funds in organizing "the Cyclers Concert". Mary is inspired daily by her family. </p>
+                            <p>Mary helped in sourcing for funds in organizing "the Cyclers Concert". Mary is inspired daily by her family. </p>
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/marye_mareey" class="fab fa-instagram" target="_blank"></a>
@@ -608,7 +608,7 @@
                         <div class="team-content">
                             <h2>Shola Umakhihe</h2>
                             <h3>Web Developer</h3>
-                            <p>I love to Smile...</p>
+                            <p>I solve complex problems with codes...<br>when not coding, i decorate</p>
                             <h4>
                                 <!-- Add font awesome icons -->
                                 <a href="https://instagram.com/@" class="fab fa-instagram"></a>
