--- a/home.html
+++ b/home.html
@@ -101,13 +101,13 @@
 
 
                         <div class="main__content">
-                            <h1 class="vocal anim-typewriter">Vocal</h1><br>
-                            <h2>Recording</h2>
+                            <h1 class="vocal anim-typewriter">Photo</h1><br>
+                            <h2>Studio</h2>
                             <p>Audio Recording, Mixing, Editing, mastering, Live Session</p>
                             <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
                         <div class="wave">
-                            <img id="main__img" src="images/compressed-mic.png" />
+                            <img id="main__img" src="images/4-removebg-preview.png" />
                         </div>
                     </div>
 
@@ -121,8 +121,8 @@
 
 
                         <div class="main__content">
-                            <h1 class="vocal anim-typewriter">Videography</h1><br>
-                            <h2> Photography</h2>
+                            <h1 class="vocal anim-typewriter">Video</h1><br>
+                            <h2>Production </h2>
                             <p>Audio Recording, Mixing, Editing, mastering, Live Session</p>
                             <button class="main__btn"><a href="#">Book An Appointment</a></button>
                         </div>
@@ -153,6 +153,7 @@
 
                 </div>
             </div>
+
 
             <!-- Back and forward buttons -->
             <a class="Back" onclick="plusSlides(-1)">&#10094;</a>
@@ -321,24 +322,37 @@
 
         <div class="work-sample-grid">
             <div class="grid-cointainer">
+
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/cncert.jpg" alt="">
+                    <img src="./images/DSC_0166_1 (1).jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>CYCLERS CONCERT</h4>
-                            <p>Event Management</p>
+                            <h4>Head Shot</h4>
+                            <a href="./video production/video.html">
+                                <p></p>
+                            </a>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="grid-item  js-scroll slide-down">
+                    <img src="./images/16.jpg" alt="">
+                    <div class="img-text">
+                        <div class="cont">
+                            <h4>INDOOR</h4>
+                            <p>Photoshoot</p>
                         </div>
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/12.jpg" alt="">
+                    <img src="./images/4Z9A4265.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>BTS</h4>
-                            <a href="./video production/video.html">
-                                <p>Video Production</p>
+                            <h4>OUTDOOR</h4>
+                            <a href="./photoshoot/photo.html">
+                                <p>Photo Shoot</p>
                             </a>
-
                         </div>
                     </div>
                 </div>
@@ -352,18 +366,17 @@
                     </div>
                 </div>
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/14.jpg" alt="">
+                    <img src="./images/cycler event artists.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
-                            <h4>OUTDOOR</h4>
-                            <a href="./photoshoot/photo.html">
-                                <p>Photo Shoot</p>
-                            </a>
+                            <h4>CYCLERS CONCERT</h4>
+                            <p>Event Management</p>
                         </div>
                     </div>
                 </div>
+
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/15.jpg" alt="">
+                    <img src="./images/even2.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
                             <h4>WEDDINGS/BIRTHDAYS</h4>
@@ -371,15 +384,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/16.jpg" alt="">
-                    <div class="img-text">
-                        <div class="cont">
-                            <h4>INDOOR</h4>
-                            <p>Photoshoot</p>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
@@ -441,10 +446,10 @@
                             <p>Team Work<br>Promptness<br>Strategic</p>
                             <h4>
                                 <!-- Add font awesome icons -->
-                                <a href="https://instagram.com/@" class="fab fa-instagram"></a>
-                                <a href="https://www.facebook.com/emach.el.5" class="fab fa-facebook-f"></a>
-                                <a href="https://twitter.com/mar_eey?t=sTo5YhohM-wyAwCe3unR7Q&s=09" class="fab fa-twitter"></a>
-                                <a href="#" class="fab fa-google"></a>
+                                <a href="https://instagram.com/Ekpvegreata" class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/josephekpvbgreata" class="fab fa-facebook-f"></a>
+                                <a href="https://twitter.com/Josephekpere" class="fab fa-twitter"></a>
+                                <a href="mailto:josephgodwin111@gmail.com" class="fab fa-google"></a>
                             </h4>
                             </h4>
                         </div>
@@ -469,10 +474,10 @@
                             <p>Explorer</p>
                             <h4>
                                 <!-- Add font awesome icons -->
-                                <a href="https://instagram.com/@" class="fab fa-instagram"></a>
-                                <a href="https://www.facebook.com/emach.el.5" class="fab fa-facebook-f"></a>
-                                <a href="https://twitter.com/mar_eey?t=sTo5YhohM-wyAwCe3unR7Q&s=09" class="fab fa-twitter"></a>
-                                <a href="#" class="fab fa-google"></a>
+                                <a href="https://instagram.com/Bob_klint" class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/Bobklint" class="fab fa-facebook-f"></a>
+                                <a href="https://twitter.com/Clintonohwofasa" class="fab fa-twitter"></a>
+                                <a href="mailto:ohwofasaclinton@gmail.com" class="fab fa-google"></a>
                             </h4>
                             </h4>
                         </div>
@@ -497,10 +502,10 @@
                             <p>I love showing the beauty of people through my pictures.</p>
                             <h4>
                                 <!-- Add font awesome icons -->
-                                <a href="https://instagram.com/@" class="fab fa-instagram"></a>
-                                <a href="https://www.facebook.com/emach.el.5" class="fab fa-facebook-f"></a>
-                                <a href="https://twitter.com/mar_eey?t=sTo5YhohM-wyAwCe3unR7Q&s=09" class="fab fa-twitter"></a>
-                                <a href="#" class="fab fa-google"></a>
+                                <a href="https://instagram.com/esosaasowata" class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/esosaaasowata" class="fab fa-facebook-f"></a>
+                                <a href="#" class="fab fa-twitter"></a>
+                                <a href="mailto:asowataesosa@gmail.com" class="fab fa-google"></a>
                             </h4>
                             </h4>
                         </div>
@@ -516,7 +521,7 @@
 
 
 
-                <div class="column blogBox moreBox ">
+                <div class="column blogBox moreBox hidden">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="images/photographer1.jpg" alt="Team Image">
@@ -527,10 +532,10 @@
                             <p>I am a photographer and Canon lover, I also like them big and hot! </p>
                             <h4>
                                 <!-- Add font awesome icons -->
-                                <a href="https://instagram.com/@" class="fab fa-instagram"></a>
-                                <a href="https://www.facebook.com/emach.el.5" class="fab fa-facebook-f"></a>
-                                <a href="https://twitter.com/mar_eey?t=sTo5YhohM-wyAwCe3unR7Q&s=09" class="fab fa-twitter"></a>
-                                <a href="#" class="fab fa-google"></a>
+                                <a href="https://instagram.com/Kingsman_photo" class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/Chiedlzie Jonacs" class="fab fa-facebook-f"></a>
+                                <a href="https://twitter.com/Great Jonacs" class="fab fa-twitter"></a>
+                                <a href="mailto:jonacsgreat@gmail.com" class="fab fa-google"></a>
                             </h4>
                             </h4>
                         </div>
@@ -544,7 +549,7 @@
                     </div>
                 </div>
 
-                <div class="column blogBox moreBox">
+                <div class="column blogBox moreBox hidden">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/photographer3.jpg" alt="Team Image">
@@ -555,10 +560,10 @@
                             <p>I'm a Creative and Hard working Portraits and event photographer. </p>
                             <h4>
                                 <!-- Add font awesome icons -->
-                                <a href="https://instagram.com/@" class="fab fa-instagram"></a>
-                                <a href="https://www.facebook.com/emach.el.5" class="fab fa-facebook-f"></a>
-                                <a href="https://twitter.com/mar_eey?t=sTo5YhohM-wyAwCe3unR7Q&s=09" class="fab fa-twitter"></a>
-                                <a href="#" class="fab fa-google"></a>
+                                <a href="http://instagram.com/simon_keys" class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/Simonekakaborkeys" class="fab fa-facebook-f"></a>
+                                <a href="https://twitter.com/SEkakabor?t=NXCJD0XDqmKMeeqZmFjhuQ&s=09" class="fab fa-twitter"></a>
+                                <a href="mailto:simonekakaborkeys@gmail.com" class="fab fa-google"></a>
                             </h4>
                             </h4>
                         </div>
@@ -572,7 +577,7 @@
                     </div>
                 </div>
 
-                <div class="column blogBox moreBox">
+                <div class="column blogBox moreBox hidden">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/videographer.jpg" alt="Team Image">
@@ -583,9 +588,9 @@
                             <p>I am a professional Videographer and video editor.</p>
                             <h4>
                                 <!-- Add font awesome icons -->
-                                <a href="https://instagram.com/@" class="fab fa-instagram"></a>
-                                <a href="https://www.facebook.com/emach.el.5" class="fab fa-facebook-f"></a>
-                                <a href="https://twitter.com/mar_eey?t=sTo5YhohM-wyAwCe3unR7Q&s=09" class="fab fa-twitter"></a>
+                                <a href="#" class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/JoshuaOsasogie " class="fab fa-facebook-f"></a>
+                                <a href="https://twitter.com/Joshman" class="fab fa-twitter"></a>
                                 <a href="#" class="fab fa-google"></a>
                             </h4>
                             </h4>
@@ -599,8 +604,35 @@
                 </div> -->
                     </div>
                 </div>
+                <div class="column blogBox moreBox hidden">
+                    <div class="team  js-scroll slide-down">
+                        <div class="team-img">
+                            <img src="/images/ezinnee.jpg" alt="Team Image">
+                        </div>
+                        <div class="team-content">
+                            <h2 style="font-size: 15px;">Deborah Ezinne Ifegwu </h2>
+                            <h3>Content creator/Social media manager </h3>
+                            <p style="font-size: 12px;">Deborah is a social butterfly, she enjoys beauty and fashion contents. Totally a social media person and is passionate about her job. .</p>
+                            <h4>
+                                <!-- Add font awesome icons -->
+                                <a href="https://instagram.com/babygirlbutter " class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/profile.php?id=100074162701669" class="fab fa-facebook-f"></a>
+                                <a href="https://twitter.com/thecryptgirl1" class="fab fa-twitter"></a>
+                                <a href="mailto:ezinneifegwu@gmail.com" class="fab fa-google"></a>
+                            </h4>
+                            </h4>
+                        </div>
+                        <!-- <div class="team-social">
+                    <a href="#" class="social-tw"> <i class="fab fa-twitter"></i></a>
+                    <a href="#" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                    <a href="#" class="social-in"> <i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-yt"> <i class="fab fa-youtube"></i></a>
+                </div> -->
+                    </div>
+                </div>
 
-                <div class="column blogBox moreBox">
+                <div class="column blogBox moreBox hidden">
                     <div class="team  js-scroll slide-down">
                         <div class="team-img">
                             <img src="/images/dev.jpg" alt="Team Image">
@@ -611,10 +643,10 @@
                             <p>I solve complex problems with codes...<br>when not coding, i decorate</p>
                             <h4>
                                 <!-- Add font awesome icons -->
-                                <a href="https://instagram.com/@" class="fab fa-instagram"></a>
-                                <a href="https://www.facebook.com/emach.el.5" class="fab fa-facebook-f"></a>
-                                <a href="https://twitter.com/mar_eey?t=sTo5YhohM-wyAwCe3unR7Q&s=09" class="fab fa-twitter"></a>
-                                <a href="#" class="fab fa-google"></a>
+                                <a href="https://instagram.com/sholaumakhihe" class="fab fa-instagram"></a>
+                                <a href="https://www.facebook.com/sholaumakhihe" class="fab fa-facebook-f"></a>
+                                <a href="https://twitter.com/jayumaks" class="fab fa-twitter"></a>
+                                <a href="mailto:sholaumakhihe@gmail.com" class="fab fa-google"></a>
                             </h4>
                         </div>
                         <!-- <div class="team-social">
@@ -628,9 +660,9 @@
                 </div>
 
 
-                <!-- <div id="loadMore">
+                <div id="loadMore">
                     <a href="#">Load More</a>
-                </div> -->
+                </div>
 
             </div>
 
@@ -759,7 +791,7 @@
     <script src="js/carousel.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <!-- <script src="/js/load-more-button.js"></script> -->
+    <script src="/js/load-more-button.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js">
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/owl.carousel.min.js">
