--- a/home.html
+++ b/home.html
@@ -376,7 +376,7 @@
                 </div>
 
                 <div class="grid-item  js-scroll slide-down">
-                    <img src="./images/even2.jpg" alt="">
+                    <img src="./images/2.jpg" alt="">
                     <div class="img-text">
                         <div class="cont">
                             <h4>WEDDINGS/BIRTHDAYS</h4>
