--- a/index.html
+++ b/index.html
@@ -6,13 +6,59 @@
     <title>CYCLERS||STUDIO </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
     <link rel="icon" type="image/png" sizes="132x132" href="./images/cycler1-.png" />
+    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+
     <link rel="stylesheet" href="./landing/landing.css">
+    <link rel="stylesheet" href="./css/styles.css">
 
 </head>
 
 <body>
+    <div id="fb-root"></div>
 
-    <link href="https://fonts.googleapis.com/css?family=Righteous" rel="stylesheet">
+    <!-- Navbar Section -->
+    <nav class="navbar">
+        <div class="navbar__container">
+            <a href="./index.html" id="navbar__logo"><img src="/images/cycler1-.png" alt="" srcset=""></i>
+            </a>
+            <div class="navbar__toggle" id="mobile-menu">
+
+                <div class="menubar">
+                    <div class="bar bar1"></div>
+                    <div class="bar bar2"></div>
+                    <div class="bar bar3"></div>
+                </div>
+
+
+
+            </div>
+            <ul class="navbar__menu">
+                <li class="navbar__item">
+                    <a href="./home.html" class="navbar__links">Home</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="./home.html" class="navbar__links">About Us</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="./home.html" class="navbar__links">Services</a>
+                </li>
+                <li class="navbar__item">
+                    <a href="./contact_us/contact.html" class="navbar__links">Contact Us</a>
+                </li>
+                <li>
+
+                    <div class="login-container">
+
+                        <button class="main__btn" type="submit"><a href="./form/form.html">Book An Appointment</a></button>
+
+                    </div>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
+
 
     <div class="gallery">
         <div class="gallery__column">
@@ -114,7 +160,7 @@
             </a>
         </div>
     </div>
-
+    <script src="./js/app.js"></script>
 
 </body>
 
